# openRayner

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  app.cpp  main.cpp  rngSantiy.ipynb
src/host/: CMakeLists.txt  app.cpp  app.hpp  bindings.h  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  commonStructs.h  compute.cpp  compute.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frameinfo.hpp  functions.cpp  functions.hpp  geometry.cpp  geometry.hpp  gui.cpp  gui.hpp  keyboard.cpp  keyboard.hpp  orayobject.cpp  orayobject.hpp  pipeline.cpp  pipeline.hpp  raytracing.cpp  raytracing.hpp  renderer.cpp  renderer.hpp  rendersystem.cpp  rendersystem.hpp  state.hpp  swapchain.cpp  swapchain.hpp  utils.hpp  window.cpp  window.hpp
src/shaders/: CMakeLists.txt  closesthit.rchit  common.glsl  lineShader.vert  miss.rmiss  raygen.rgen  raygenVF.rgen  shader.frag  shader.vert  sumPerMesh.comp  sumPerTri.comp
